# second-brain-v2

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  DRIVE_CREDENTIALS.json  GEN_GDRIVE.py  NOTAS_MEET_2PM.txt  PROJECT_PLAN.md  README.md  TODO.md  agente_roleplay.py  app.py  audio_worker.py  chat_history.py  estructura_second_brain.json  function_tools.py  google_drive.py  main.py  plan.md  playground.py  procesa_mensajes.py  pyproject.toml  requirements.txt  run_audio_worker.py  scenario.md  startup.md  system_prompt.py  textos_drive_extraidos.json  tools.py  utils.py  whisper.py
.kilo/plans/: 1775837021744-crisp-squid.md
agente_rolplay/: __init__.py  banco_poller.py  broadcast_worker.py  config.py  main.py  usecase_api.py
agente_rolplay/agent/: cli_tools.py  provider_adapter.py  roleplay_agent.py  system_prompt.py  tools.py
agente_rolplay/db/: auth.py  database.py  models.py  schemas.py  whatsapp_auth.py
agente_rolplay/messaging/: audio_worker.py  chat_history_manager.py  greeting_handler.py  message_processor.py  process_messages.py  twilio_client.py  whisper_service.py
agente_rolplay/routers/: admin.py  auth.py  coaching.py  datastore.py  pages.py  rag.py  roles.py  users.py  webhook.py
agente_rolplay/static/: customize.js  i18n.js  theme.js
agente_rolplay/static/react/: index.html
agente_rolplay/static/react/assets/: index-B1t4MXIX.js  index-B7ZrPlba.css  index-C-FqSX1L.js
agente_rolplay/storage/: analytics_logger.py  cloudinary_storage.py  file_processor.py  pinecone_client.py
agente_rolplay/templates/: admin_base.html  admin_dashboard.html  admin_login.html  admin_orgs.html  admin_scenarios.html  admin_settings.html  admin_templates.html  admin_users.html  auth.html  base.html  broadcasts.html  chat.html  dashboard.html  documents.html  groups.html  index.html  insights.html  login.html  scenarios.html  settings.html  signup.html  users.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/api/: admin.ts  auth.ts  client.ts  index.ts  roles.ts  users.ts
frontend/src/components/charts/: BarChart.tsx  DonutChart.tsx  LineChart.tsx  index.ts
frontend/src/components/layout/: AppLayout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/ui/: Alert.tsx  (+8 more)
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/locales/: en.json  es.json
frontend/src/types/: index.ts
metadata/: metadata_5566098295.json
scripts/: GEN_GDRIVE.py  __init__.py  migrate_pinecone_org_ids.py  playground.py  run_audio_worker.py
src/agente_rolplay/: analytics_logger.py  audio_worker.py  auth.py  chat_history_manager.py  cli_tools.py  cloudinary_storage.py  config.py  database.py  file_processor.py  google_drive.py  greeting_handler.py  helpers.py  main.py  message_processor.py  models.py  pinecone_client.py  process_messages.py  roleplay_agent.py  supabase_storage.py  system_prompt.py  twilio_client.py  whatsapp_auth.py  whisper_service.py
src/agente_rolplay/routers/: auth.py  rag.py  roles.py  users.py  webhook.py
src/agente_rolplay/templates/: login.html  signup.html  users.html
tests/: test_audio.py  test_message_processor_upload_state.py  test_user_customization_api.py
(+11 files in other folders)
